--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Edgemoorian Phonetic & Password Tools",
   "short_name": "Edgemoorian Tools",
   "description": "Offline phonetic converter and password generator with speech support in 9 languages. No data collected – all local processing.",
-  "start_url": "index.html",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffff00",
   "theme_color": "#ffff00",
