Fix start_url and add scope for subfolder PWA compatibility

--- a/manifest.json
+++ b/manifest.json
@@ -58,14 +58,14 @@
       "label": "Phonetic output with speech controls"
     },
     {
-      "src": "screenshot-password-generator-1.png",
+      "src": "screenshot-password generator 1.png",
       "sizes": "1080x1920",
       "type": "image/png",
       "form_factor": "narrow",
       "label": "Password Phonetic Generator"
     },
     {
-      "src": "screenshot-night-mode.png",
+      "src": "screenshot-night mode.png",
       "sizes": "1080x1920",
       "type": "image/png",
       "form_factor": "narrow",
