--- a/manifest.json
+++ b/manifest.json
@@ -84,6 +84,13 @@
       "type": "image/png",
       "form_factor": "narrow",
       "label": "Additional app feature"
+    },
+    {
+      "src": "screenshot-wide.png",   // ← Your resized 1920x1080 file (change name if different)
+      "sizes": "1920x1080",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Desktop/tablet view of the app"
     }
   ]
 }
