--- a/manifest.json
+++ b/manifest.json
@@ -86,7 +86,7 @@
       "label": "Additional app feature"
     },
     {
-      "src": "screenshot-wide.png",   // ← Your resized 1920x1080 file (change name if different)
+      "src": "screenshot-wide.png",
       "sizes": "1920x1080",
       "type": "image/png",
       "form_factor": "wide",
